--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/kevduc/puzzle-cubes-weight/issues"
   },
-  "homepage": "https://github.com/kevduc/puzzle-cubes-weight"
+  "homepage": "https://kevduc.github.io/puzzle-cubes-weight/"
 }
